Fixed footer, bugs, layout problems
Related content moved to footer Transparent border bug fixed. Removed Nav from article tag.

--- a/main.css
+++ b/main.css
@@ -5,12 +5,7 @@ body{
     margin: auto;
     
 }
-#main {
-  border: .01px transparent solid;
-  width: 1440px;
-  height:  805px;
-  
-}
+
 #billboard{
     background-image: url(https://web.archive.org/web/20140228114747im_/http://images.apple.com/v/home/as/images/your_verse_hero.jpg);
     background-position: bottom;
@@ -18,7 +13,6 @@ body{
     width: 1440px;
     background-position: top;
     background-repeat: no-repeat;
-    image-resolution: 150%;
     
     padding: 700px;
     margin: -700px;
@@ -30,13 +24,7 @@ article{
 }
 
 #related-products{
-    display: flex;
-    
-    justify-content: center;
-    margin: auto;
-    margin-top: 75px;
-    padding-left: 0;
-    width: 1440px;
+    margin: 0;
 }
 #related-products li img{
 width: 100%;
@@ -177,7 +165,8 @@ footer{
     color: #6e6e6e;
     font: 12px "lucida Grande", "Helvetica"; 
     background-color: white;
-    width: 110%;
+    width: 100%;
+    height: 600px;
 }
 footer div{
     margin: 30px;
@@ -210,14 +199,18 @@ footer span a{
     border-left: .4px solid #6e6e6e;
     padding-left: 6px;
 }
-
+footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
 footer ul{
     display: flex;
     justify-content: center;
     list-style: none;
-    margin: 30px;
+    padding: 0;
 }
-footer ul li{
+footer div ul li{
     padding-left: 6px;
     margin-left: 6px;
     border-left: 1px solid #6e6e6e;
@@ -233,3 +226,44 @@ border-left: none;
     width: 100%;
     height: 100%;
 }
+#promo1{
+    background-image: url(https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_iphone5s.jpg);
+    height: 200px;  
+    margin: 0;
+}
+#promo2{
+  background-image: url(https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_iphone5c.jpg);
+  height: 200px; 
+  margin: 0; 
+}
+#promo3{
+    background-image: url(https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_30_years.jpg);
+    height: 200px;  
+    margin: 0;
+  }
+  #promo4{
+    background-image: url(https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_supplier_responsibility.jpg);
+    height: 200px;  
+    margin: 0;
+  }
+  #related-products li{
+      width: 25%;
+  }
+  .promo{
+      padding: 0;
+      margin: 0;
+      list-style: none;
+
+  }
+  #terms-services-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+  }
+  #helpful-links{
+      height: 56.48px;
+  }
+    
+ #all-rights-reserved{
+     width: 260px;
+ }
